# Words

./: .gitignore  README.md  pyproject.toml
conf/: conf.yaml  logging.yaml
sources/sogou-word-info-libs/: Virginia.json  Washington.json  act.json  action.json  actor.json  advice.json  advise.json  agree.json  along.json  already.json  among.json  angry.json  anima.json  animal.json  argue.json  argument.json  arrest.json  asleep.json  at.json  attack.json  attend.json  attention.json  attentive.json  awake.json  be.json  bear.json  before.json  behind.json  berry.json  between.json  birth.json  birthday.json  black.json  blue.json  brown.json  burn.json  card.json  care.json  careful.json  cheat.json  (+204 more)
sources/sogou-word-info-libs/I/: I.json  ID.json  ice cream.json  ice.json  icon.json  idea.json  ideal.json  identical.json  identification.json  identify.json  identity.json  ideological.json  ideology.json  idiot.json  if.json  ignorance.json  ignore.json  ill.json  illegal.json  illness.json  illusion.json  illustrate.json  illustration.json  image.json  imagery.json  imaginary.json  imagination.json  imagine.json  immediate.json  immediately.json  immense.json  immigrant.json  immigration.json  imminent.json  immune.json  impact.json  impatient.json  implement.json  implementation.json  implication.json  (+197 more)
sources/sogou-word-info-libs/a/: AIDS.json  April.json  (+359 more)
src/: app.py  article_ui.py  base.py  book-bak.py  book.py  configuration.py  fetcher.py  gen_mp3.py  gen_vocabulary_book_pdf.py  main_ui.py  media.py  n_book.py  plan.py  ui_utils.py  utils.py  word_ui.py
(+7877 files in other folders)
