[project]
name = "Words"
version = "1.0.0"
description = "A Word App"
authors = [
    { name = "十三", email = "306678145@qq.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pillow",
    "opencv-python",
    "pyaudio",
    "pygame",
    "moviepy",
    "numpy",
    "pydantic",
    "pyyaml",
    "mutagen",
    "bs4",
    "pydub",
]